# tests

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tests/: __init__.py  chi.py  parametric.py  z_and_t.py
