[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ name = "Luca Marchetti" }]
name = "tests"
description = "A small Python library for perfoming statistical tests."
version = "0.1.0"
requires-python = ">=3.8"
readme = "README.MD"
license = { text = "MIT" }
dependencies = ["numpy", "scipy"]

[tool.setuptools.packages.find]
where = ["src"]

# [tool.setuptools.package-data]
# plotter = [""]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.black]
line-length = 100

[project.urls]
Repository = "https://github.com/lmarchetti02/tests"
